--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Code Below is Joshua's"
+    "## Code Below is Default"
    ]
   },
   {
