Fixing redundancy in multiple cmaps

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,23 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_70036\\1835064403.py:73: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_80020\\2386387825.py:73: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(X_grid, Y_grid, Z_grid, c=color_new, cmap=custom_cmap, s=50, marker='o')\n",
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_70036\\1835064403.py:74: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
-      "  ax.scatter(points_3D_test[:,0], points_3D_test[:,1], points_3D_test[:,2], c=color_new_transformation, cmap=custom_cmap_transformation, s=50, marker='o')\n"
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_80020\\2386387825.py:74: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "  ax.scatter(points_3D_test[:,0], points_3D_test[:,1], points_3D_test[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21efee258f234c4387490834576e7ede",
+       "model_id": "8ffab531e6ce408ab0c383753d95b082",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,6 @@
     "cmap_colors = [(0, 'red'), (1, 'blue'), (1, 'green')]  # Colors for the combined dimension\n",
     "cmap_colors_transformation = [(0, 'red'), (1, 'blue'), (1, 'green')]  # Colors for the combined dimension\n",
     "custom_cmap = LinearSegmentedColormap.from_list('custom', cmap_colors)\n",
-    "custom_cmap_transformation = LinearSegmentedColormap.from_list('custom_transformation', cmap_colors_transformation)\n",
     "\n",
     "# Create a 2D grid of values for both dimensions\n",
     "num_dimensions = 2\n",
@@ -157,7 +156,7 @@
     "\n",
     "# Plot the 3D grid with the colormap representing both dimensions for both the original and the transformed matrix\n",
     "ax.scatter(X_grid, Y_grid, Z_grid, c=color_new, cmap=custom_cmap, s=50, marker='o')\n",
-    "ax.scatter(points_3D_test[:,0], points_3D_test[:,1], points_3D_test[:,2], c=color_new_transformation, cmap=custom_cmap_transformation, s=50, marker='o')\n",
+    "ax.scatter(points_3D_test[:,0], points_3D_test[:,1], points_3D_test[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n",
     "\n",
     "# Set the 3D axis limits so we can view everything\n",
     "min_val = min(points_3D_test.flatten())\n",
