Copied over isaacc's code on transformations

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,21 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "import functools\n",
-    "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from matplotlib.colors import LinearSegmentedColormap\n",
+    "from sklearn.preprocessing import normalize\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e074e39b97c42069c76cb61ee4f4044",
+       "model_id": "cca85b63b61840de94d8d3c979ad895a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,16 +106,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_80020\\719570193.py:72: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\2226739698.py:67: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(X_grid, Y_grid, Z_grid, c=color_new, cmap=custom_cmap, s=50, marker='o')\n",
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_80020\\719570193.py:73: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\2226739698.py:68: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(points_3D_new[:,0], points_3D_new[:,1], points_3D_new[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "085b4eac11f44ae9a8b978e3afd18524",
+       "model_id": "6632fe8c09ea4bbfbe185f18c1c5a7d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,11 +139,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from matplotlib.colors import LinearSegmentedColormap\n",
-    "from sklearn.preprocessing import normalize\n",
-    "\n",
     "# Create a custom colormap\n",
     "cmap_colors = [(0, 'red'), (1, 'blue'), (1, 'green')]  # Colors for the combined dimension\n",
     "cmap_colors_transformation = [(0, 'red'), (1, 'blue'), (1, 'green')]  # Colors for the combined dimension\n",
@@ -232,21 +229,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_80020\\3113444225.py:25: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\3665385182.py:25: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(tensor[:,0], tensor[:,1], tensor[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b81c95f13ed4b2092f3cde45040c1c3",
+       "model_id": "5589c37204704d41981d6f208e45e873",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,14 +269,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_80020\\3113444225.py:38: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\3665385182.py:38: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(tensor[:,0], tensor[:,1], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4ec8b76356b430fa0ae3ff30bf0b13f",
+       "model_id": "87710fcc26644968be304cbe2746e318",
        "version_major": 2,
        "version_minor": 0
       },
@@ -351,25 +348,61 @@
     "    return\n",
     "\n",
     "def create_rotation_matrix_clockwise(degrees):\n",
-    "    \"Descript: creates and returns a rotation matrix that rotates 90deg clockwise around the origin\"\n",
-    "    return\n",
+    "    \"Descript: creates and returns a rotation matrix that rotates degrees clockwise around the origin\" \n",
+    "    radians = math.radians(degrees)\n",
+    "    cos_theta = math.cos(radians)\n",
+    "    sin_theta = math.cos(radians)\n",
     "\n",
-    "def create_translation_matrix(dx, dy):\n",
+    "    # 2D rotation matrix\n",
+    "    rotation_matrix = np.array([[cos_theta, -sin_theta, 0],\n",
+    "                                [sin_theta, cos_theta, 0],\n",
+    "                                [0, 0, 1]])\n",
+    "\n",
+    "    return rotation_matrix\n",
+    "\n",
+    "def create_translation_matrix(dx, dy, dz = 0, dims = 2):\n",
     "    \"Descript: creates and returns a translation matrix that translates by dx and dy\"\n",
-    "    return\n",
     "\n",
-    "def create_scale_matrix(scale):\n",
+    "    if dims == 2:\n",
+    "        translation_matrix = np.array([[1, 0, dx], \n",
+    "                                       [0, 1, dy], \n",
+    "                                       [0, 0, 1]])\n",
+    "    elif dims == 3:\n",
+    "        translation_matrix = np.array([[1, 0, 0, dx],\n",
+    "                                       [0, 1, 0, dy],\n",
+    "                                       [0, 0, 1, dz], \n",
+    "                                       [0, 0, 0, 1]])\n",
+    "\n",
+    "    return translation_matrix\n",
+    "\n",
+    "def create_scale_matrix(scaleX, scaleY, dims = 2):\n",
     "    \"Descript: creates and returns a scale matrix that scales by scale\"\n",
-    "    return\n",
+    "    scale_matrix = np.array([[scaleX, 0, 0],\n",
+    "                             [0, scaleY, 0],\n",
+    "                             [0, 0, 1]])\n",
     "\n",
-    "def create_skew_matrix(degrees):\n",
+    "    return scale_matrix\n",
+    "\n",
+    "def create_skew_matrix(degrees, dims = 2):\n",
     "    \"Descript: creates and returns a skew matrix that where degrees is the angle of the parallelogram\"\n",
-    "    return\n",
+    "\n",
+    "    # Horizontal Skew\n",
+    "    radians = math.radians(degrees)\n",
+    "    skew_matrix_X = np.array([[1, math.tan(radians), 0],\n",
+    "                            [0, 1, 0],\n",
+    "                            [0, 0, 1]])\n",
+    "    \n",
+    "    skew_matrix_Y = np.array([[1, 0, 0],\n",
+    "                              [math.tan(radians), 1, 0],\n",
+    "                              [0, 0, 1]])\n",
+    "    \n",
+    "    return skew_matrix_X, skew_matrix_Y\n",
     "\n",
     "def apply_transformation(tensor, transformation):\n",
     "    \"\"\"\n",
     "    Description: Applies a 3x3 homography to an Nx3 tensor and returns an Nx3 tensor\n",
     "    \"\"\"\n",
+    "\n",
     "    return np.matmul(tensor, transformation)\n",
     "\n",
     "def create_affine_transformation():\n",
@@ -403,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -422,14 +455,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_80020\\3872947505.py:44: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\3872947505.py:44: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  sc = ax.scatter(x_new, y_new, c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fcf6d8c4c9c475aa4040961e79b0da8",
+       "model_id": "67d2332eb3ef4bb69ef0c6942a864b8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -513,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
