Fixed bug in rotation and changed skew to not be based on degrees

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cca85b63b61840de94d8d3c979ad895a",
+       "model_id": "84cd9049e1054fec965f43b03f660030",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6632fe8c09ea4bbfbe185f18c1c5a7d7",
+       "model_id": "78cf0362d9f44e4dac007924a147edda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,21 +229,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rotation matrix\n",
+      "[[ 6.123234e-17 -1.000000e+00  0.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17  0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+      "Translation matrix\n",
+      "[[1 0 3]\n",
+      " [0 1 3]\n",
+      " [0 0 1]]\n",
+      "scaling matrix\n",
+      "[[1 0 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n",
+      "skew matrices\n",
+      "[[1 3 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n",
+      "[[1 0 0]\n",
+      " [3 1 0]\n",
+      " [0 0 1]]\n",
+      "(3, 3)\n",
+      "(3, 3)\n",
+      "(3, 3)\n",
+      "(3, 3)\n",
+      "(3, 3)\n",
+      "Affine transformation shape:  (3, 3)\n",
+      "[[  3. -10.   3.]\n",
+      " [  1.  -3.   3.]\n",
+      " [  0.   0.   1.]]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\3665385182.py:25: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\969686140.py:25: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(tensor[:,0], tensor[:,1], tensor[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5589c37204704d41981d6f208e45e873",
+       "model_id": "c3e0f0d9d3e94a98a921505d2c10ca75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,14 +303,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\3665385182.py:38: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_31220\\969686140.py:38: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(tensor[:,0], tensor[:,1], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87710fcc26644968be304cbe2746e318",
+       "model_id": "97bd6c1699994103ad683871f8e6c228",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,8 +384,9 @@
     "def create_rotation_matrix_clockwise(degrees):\n",
     "    \"Descript: creates and returns a rotation matrix that rotates degrees clockwise around the origin\" \n",
     "    radians = math.radians(degrees)\n",
+    "\n",
     "    cos_theta = math.cos(radians)\n",
-    "    sin_theta = math.cos(radians)\n",
+    "    sin_theta = math.sin(radians)\n",
     "\n",
     "    # 2D rotation matrix\n",
     "    rotation_matrix = np.array([[cos_theta, -sin_theta, 0],\n",
@@ -383,17 +418,17 @@
     "\n",
     "    return scale_matrix\n",
     "\n",
-    "def create_skew_matrix(degrees, dims = 2):\n",
-    "    \"Descript: creates and returns a skew matrix that where degrees is the angle of the parallelogram\"\n",
+    "def create_skew_matrix(skew_amt, dims = 2):\n",
+    "    \"Descript: creates and returns a skew matrix that based on skew amt\"\n",
     "\n",
     "    # Horizontal Skew\n",
-    "    radians = math.radians(degrees)\n",
-    "    skew_matrix_X = np.array([[1, math.tan(radians), 0],\n",
+    "    radians = math.radians(skew_amt)\n",
+    "    skew_matrix_X = np.array([[1, skew_amt, 0],\n",
     "                            [0, 1, 0],\n",
     "                            [0, 0, 1]])\n",
     "    \n",
     "    skew_matrix_Y = np.array([[1, 0, 0],\n",
-    "                              [math.tan(radians), 1, 0],\n",
+    "                              [skew_amt, 1, 0],\n",
     "                              [0, 0, 1]])\n",
     "    \n",
     "    return skew_matrix_X, skew_matrix_Y\n",
@@ -408,20 +443,40 @@
     "def create_affine_transformation():\n",
     "    \"\"\"\n",
     "    Description: Creates a 3x3 homography by appling a rotation matrix, translation matrix, scaling matrix, and skew matrix \n",
-    "    You will have to change the input to these functions to create your final affine transformation matrix\n",
+    "    You will have to change the input to these functions to create your final affine transformation matrix. \n",
     "    \"\"\"\n",
-    "    # TODO: Create these functions\n",
     "    rotation_matrix = create_rotation_matrix_clockwise(90)\n",
     "    translation_matrix = create_translation_matrix(3, 3)\n",
-    "    scaling_matrix = create_scale_matrix(1)\n",
-    "    # I think skew would be defined by an angle\n",
-    "    skew_matrix = create_skew_matrix()\n",
+    "    scaling_matrix = create_scale_matrix(1, 1)\n",
+    "    skew_matrix_X, skew_matrix_Y = create_skew_matrix(3)\n",
+    "    \n",
+    "    # print(np.matmul(rotation_matrix, translation_matrix))\n",
     "\n",
-    "    affine_transformation = functools.reduce(np.matmul, [rotation_matrix, translation_matrix, scaling_matrix, skew_matrix])\n",
+    "    print(\"Rotation matrix\")\n",
+    "    print(rotation_matrix)\n",
+    "    print(\"Translation matrix\")\n",
+    "    print(translation_matrix)\n",
+    "    print(\"scaling matrix\")\n",
+    "    print(scaling_matrix)\n",
+    "    print(\"skew matrices\")\n",
+    "    print(skew_matrix_X)\n",
+    "    print(skew_matrix_Y)\n",
+    "\n",
+    "    print(rotation_matrix.shape)\n",
+    "    print(translation_matrix.shape)\n",
+    "    print(scaling_matrix.shape)\n",
+    "    print(skew_matrix_X.shape)\n",
+    "    print(skew_matrix_Y.shape)\n",
+    "\n",
+    "    affine_transformation = functools.reduce(np.matmul, [translation_matrix, skew_matrix_X, skew_matrix_Y, scaling_matrix, rotation_matrix])\n",
+    "    # affine_transformation = translation_matrix * skew_matrix_X * skew_matrix_Y * scaling_matrix * rotation_matrix\n",
     "\n",
     "    return affine_transformation\n",
     "\n",
     "points_2D_original = get_rid_of_z_dimension(points_3D_original)\n",
+    "affine_transformation = create_affine_transformation()\n",
+    "print(\"Affine transformation shape: \", affine_transformation.shape)\n",
+    "print(affine_transformation)\n",
     "plot_tensor(points_3D_original)\n",
     "plot_tensor(points_2D_original)\n",
     "    "
@@ -436,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +517,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67d2332eb3ef4bb69ef0c6942a864b8f",
+       "model_id": "ed72911e8d124ce896e7d295e75bcc4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -546,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
