Fixed bugs using Joshua's code.

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_21569/1556801502.py:75: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_5749/1556801502.py:75: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(X_grid, Y_grid, Z_grid, c=color_new, cmap=custom_cmap, s=50, marker='o')\n",
-      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_21569/1556801502.py:76: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_5749/1556801502.py:76: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(points_3D_test[:,0], points_3D_test[:,1], points_3D_test[:,2], c=color_new_transformation, cmap=custom_cmap_transformation, s=50, marker='o')\n"
      ]
     },
@@ -283,26 +283,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_21569/2557493827.py:26: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
-      "  ax.scatter(tensor[:,0], tensor[:,1], tensor[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Rotation matrix\n",
+      "[[ 6.123234e-17 -1.000000e+00  0.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17  0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+      "Translation matrix\n",
+      "[[1 0 3]\n",
+      " [0 1 3]\n",
+      " [0 0 1]]\n",
+      "scaling matrix\n",
+      "[[1 0 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n",
+      "skew matrices\n",
+      "[[1 3 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n",
+      "[[1 0 0]\n",
+      " [3 1 0]\n",
+      " [0 0 1]]\n",
       "(3, 3)\n",
       "(3, 3)\n",
       "(3, 3)\n",
       "(3, 3)\n",
       "(3, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_5749/1580763341.py:26: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "  ax.scatter(tensor[:,0], tensor[:,1], tensor[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
@@ -319,7 +338,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_21569/2557493827.py:42: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "/var/folders/x0/9q9n7mkn07z62hr6_4xxv6hc0000gn/T/ipykernel_5749/1580763341.py:42: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(tensor[:,0], tensor[:,1], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
@@ -332,6 +351,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  3. -10.   3.]\n",
+      " [  1.  -3.   3.]\n",
+      " [  0.   0.   1.]]\n"
+     ]
     }
    ],
    "source": [
@@ -393,7 +421,7 @@
     "\n",
     "    radians = math.radians(degrees)\n",
     "    cos_theta = math.cos(radians)\n",
-    "    sin_theta = math.cos(radians)\n",
+    "    sin_theta = math.sin(radians)\n",
     "\n",
     "    # 2D rotation matrix\n",
     "    rotation_matrix = np.array([[cos_theta, -sin_theta, 0],\n",
@@ -431,12 +459,12 @@
     "\n",
     "    # Horizontal Skew\n",
     "    radians = math.radians(degrees)\n",
-    "    skew_matrix_X = np.array([[1, math.tan(radians), 0],\n",
+    "    skew_matrix_X = np.array([[1, degrees, 0],\n",
     "                            [0, 1, 0],\n",
     "                            [0, 0, 1]])\n",
     "    \n",
     "    skew_matrix_Y = np.array([[1, 0, 0],\n",
-    "                              [math.tan(radians), 1, 0],\n",
+    "                              [degrees, 1, 0],\n",
     "                              [0, 0, 1]])\n",
     "    \n",
     "    return skew_matrix_X, skew_matrix_Y\n",
@@ -457,7 +485,19 @@
     "    rotation_matrix = create_rotation_matrix_clockwise(90)\n",
     "    translation_matrix = create_translation_matrix(3, 3)\n",
     "    scaling_matrix = create_scale_matrix(1, 1)\n",
-    "    skew_matrix_X, skew_matrix_Y = create_skew_matrix(90)\n",
+    "    skew_matrix_X, skew_matrix_Y = create_skew_matrix(3)\n",
+    "    \n",
+    "    # print(np.matmul(rotation_matrix, translation_matrix))\n",
+    "\n",
+    "    print(\"Rotation matrix\")\n",
+    "    print(rotation_matrix)\n",
+    "    print(\"Translation matrix\")\n",
+    "    print(translation_matrix)\n",
+    "    print(\"scaling matrix\")\n",
+    "    print(scaling_matrix)\n",
+    "    print(\"skew matrices\")\n",
+    "    print(skew_matrix_X)\n",
+    "    print(skew_matrix_Y)\n",
     "\n",
     "    print(rotation_matrix.shape)\n",
     "    print(translation_matrix.shape)\n",
@@ -474,7 +514,7 @@
     "affine_transformation = create_affine_transformation()\n",
     "plot_tensor(points_3D)\n",
     "plot_tensor(points_2D_original)\n",
-    "    "
+    "print(affine_transformation)"
    ]
   },
   {
