About to start reverse rendering the homography

--- a/transformations.ipynb
+++ b/transformations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "463d4022360e44e5b4907010cd532761",
+       "model_id": "d0dcfef2c0824a6ba17b6f8ed43fc205",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,16 +109,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_28224\\214452720.py:67: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_26896\\214452720.py:67: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(X_grid, Y_grid, Z_grid, c=color_new, cmap=custom_cmap, s=50, marker='o')\n",
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_28224\\214452720.py:68: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_26896\\214452720.py:68: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  ax.scatter(points_3D_new[:,0], points_3D_new[:,1], points_3D_new[:,2], c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a3f7373d63740a1a1e7f2756e60cab7",
+       "model_id": "25ab8c406e214d7b8795f451f6414a61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,12 +573,15 @@
     "    print(\"projection_2D.shape: \", projection_2D.shape)\n",
     "    return projection_2D\n",
     "\n",
-    "    \n"
+    "# Gets the min and max of a sequence of cells so that I can get its bounding box \n",
+    "# and render it with a reverse transform\n",
+    "def get_min_and_max(transformation_output):\n",
+    "    return 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caf5f470b24a4f379dc5175dbc7538ff",
+       "model_id": "39ddc26b59bf4a4d8086338a3900e0d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -688,7 +691,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "404a4d3bc1b6460da006e663f03319df",
+       "model_id": "f7b8191b73314018b565959e4c15bc64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,7 +716,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1122eb379ffe4998a5762e7db9250e75",
+       "model_id": "097db865fbc147cdb21d99b48b36bb5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -738,7 +741,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be1b3154b57d46c09d66329fcd0a5adc",
+       "model_id": "f55012417963411db44274baaf5cf936",
        "version_major": 2,
        "version_minor": 0
       },
@@ -763,7 +766,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de2dcc332c7b43cda52783a8b1af89a3",
+       "model_id": "15160827fd0546efb69a8b6a5ae5d981",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +791,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c5a54e3d57848d586467e4e92eaaa40",
+       "model_id": "aacceff2d6c9485fab1fabca61ce382a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -874,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -893,14 +896,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_28224\\3872947505.py:44: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "C:\\Users\\Joshua\\AppData\\Local\\Temp\\ipykernel_26896\\3872947505.py:44: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  sc = ax.scatter(x_new, y_new, c=color_new, cmap=custom_cmap, s=50, marker='o')\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ab8012f8ceb4d1dafce5baca748f3ef",
+       "model_id": "168a07a505214c96a0eb025414c377b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -984,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1025,24 +1028,27 @@
      "output_type": "stream",
      "text": [
       "(300, 215)\n",
-      "tform:  <class 'skimage.transform._geometric.ProjectiveTransform'>\n",
+      "tform:  <ProjectiveTransform(matrix=\n",
+      "    [[-6.26446174e-02, -6.97407299e-01,  1.80277025e+02],\n",
+      "     [-2.13906092e+00, -2.07381974e+00,  6.88118138e+02],\n",
+      "     [-2.40391653e-03, -1.96483835e-03,  1.00000000e+00]])>\n",
       "tf_img.shape:  (300, 215)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1cca831af50>"
+       "<matplotlib.collections.PathCollection at 0x1ead8d32690>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3e92e14254457b94afda65027dac1b",
+       "model_id": "3e115544f0d4450c9e7ccad95249c70a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1120,6 +1126,14 @@
     "Use code from this: https://www.geeksforgeeks.org/three-dimensional-plotting-in-python-using-matplotlib/ to make a 3D surface. We will then apply the homography to the 3D surface and project to 2D to get the 2D image.\n",
     "\n",
     "images go from 2D->3D->2D. The homogenous coordinate (3rd coordinate) keeps track of the math when going between 2D to 3D to 2D "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to do what I want to do in python:\n",
+    "https://stackoverflow.com/questions/70311373/applying-homography-transformation-in-python-without-using-opencv "
    ]
   }
  ],
